# koerix

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  loc_report  requirements.txt  scratch.txt
.github/workflows/: cmake.yml
arch/armv6a/: addr_space.cpp  arch.cmake  atomic.cpp  fpu.cpp  interrupt.cpp  start.S  start.cpp
arch/armv6a/include/: context.h  offsets.h
arch/armv6a/include/arch/: addr_space.h  fpu.h
arch/armv6a/include/arm/: asm.h
arch/armv6a/rt_abi/: crt.S
arch/i386/: Makefile.inc  addr_space.S  addr_space.cpp  arch.cmake  common  context.cpp  cpuid.S  features.S  gdt.c  idt.cpp  interrupt.S  sse.S  start.S  syscall.cpp
arch/i386/include/: addr_space.h  context.h  fpu.h  offsets.h  x86
arch/i386/include/arch/: addr_space.h  fpu.h
arch/x86_64/: addr_space.S  addr_space.cpp  arch.cmake  atomic.S  atomic.cpp  common  context.cpp  cpuid.S  cpuinfo.S  features.S  fpu.cpp  framebuffer.cpp  gdt.c  idt.cpp  interrupt.S  interrupt.cpp  memop.S  sse.S  start.S  start.cpp  syscall.cpp  trace.cpp
arch/x86_64/include/: addr_space.h  asm.h  context.h  features.h  fpu.h  offsets.h
arch/x86_common/: atomic.cpp  cpuinfo.cpp  fpu.cpp  framebuffer.cpp  interrupt.cpp  module.cpp  pagemap.cpp  start.c  start.cpp
arch/x86_common/include/: addr_space.h  asm.h  atomic.h  features.h  fpu.h  gdt.h  ports.h  stivale.h
baselib/: bitmap.cpp  string.c  string.cpp
baselib/include/: bitmap.h  list.h  sanity.h  stdarg.h  string.h  types.h  unique_ptr.h
boot/: limine.cfg  mkimg
env/: CMakeLists.txt  fork_test.c  hello.c  hello_world  htop.c  pipe_test.c  small_shell.c  textcon.c  thread_test.c  top.c
env/hello_world/: CMakeLists.txt
env/libkoerix/: crt0.c  syscalls.c
env/libkoerix/include/koerix/: io.h  syscall.h  threads.h  types.h
env/textcon/: CMakeLists.txt  textcon.c
kernel/: boot.cpp  cmdline.cpp  cxxrt.cpp  debug.cpp  debug_stream.cpp  devices.cpp  fd.cpp  fifo.cpp  fpu.cpp  htop.cpp  interrupt.cpp  kernel_task.cpp  loader.cpp  pipe.cpp  queue.cpp  sem.cpp  spin.cpp  start.c  stdio.cpp  syscall_list.h  sysinfo.cpp  task.cpp  term.cpp  user_proc.cpp  user_task.cpp
kernel/dev/: chardev.cpp  devfs.cpp  devices.cpp  uart.cpp
kernel/fs/: dir.cpp  fd.cpp  file.cpp  io_syscalls.cpp  vfs.cpp
kernel/include/: addr_space.h  bits.h  debug.h  elf.h  fifo.h  fpu.h  interrupt.h  kernel_task.h  ktypes.h  loader.h  lock.h  mm.h  module.h  mutex.h  page_fault.h  pagemap.h  platform.h  proc_list.h  queue.h  scheduler.h  sem.h  spin.h  stdio.h  syscalls.h  task.h  term.h  types.h  user_proc.h  user_stack.h  user_task.h
kernel/include/dev/: chardev.h  devfs.h  devices.h  uart.h
kernel/include/fs/: async_file.h  dir.h  fd.h  file.cpp  file.h  vfs.h
kernel/include/lib/: canary.h  list.h  map.h  shared_ptr.h  stdarg.h  string.h  unique_ptr.h  vector.h
kernel/include/libk/: canary.h  errno.h  list.h  map.h  shared_ptr.h  string.h  types.h  unique_ptr.h  vector.h
kernel/include/pci/: config_space.h  device.h
kernel/include/sync/: atomic.h  irq_lock.h  lock.h  mutex.h  spin.h
kernel/lib/: error_msg.c  string.c
kernel/libk/: error_msg.c  string.c
kernel/locks/: irq_lock.cpp
kernel/mm/: heap.cpp  page_fault.cpp  pagemap.cpp
kernel/pci/: device.cpp  scan.cpp
kernel/sched/: execve.cpp  exit.cpp  mutex.cpp  proc_list.cpp  scheduler.cpp  sleep.cpp  task_syscalls.cpp
kernel/sync/: mutex.cpp  spin.cpp
libc/: CMakeLists.txt  syscall_list.h
libc/armv6a/include/bits/: atomic_arch.h
libc/cmake/: i386.cmake  x86_64.cmake
libc/generic/: atomic.h  crt0.c  errno.c  exit.c  fork_impl.h  libc.c  libc.h  lock.h
libc/generic/ctype/: isdigit.c
libc/generic/env/: __environ.c
libc/generic/koerix/: console_font.c  framebuffer.c  keyboard.c  threads.c
libc/generic/math/: __fpclassifyl.c  __signbitl.c  frexpl.c  libm.h
libc/generic/misc/: __strerror.h  ioctl.c  strerror.c
libc/generic/multibyte/: internal.h  locale_impl.h  wcrtomb.c  wctomb.c
libc/generic/process/: execv.c
libc/generic/stdio/: __fprintf.c  __lockfile.c  __overflow.c  __stdio_close.c  __stdio_exit.c  __stdio_read.c  __stdio_seek.c  __stdio_write.c  __stdout_write.c  __toread.c  __towrite.c  __uflow.c  aio_impl.h  fflush.c  fread.c  fwrite.c  getc.c  getc.h  getchar.c  ofl.c  printf.c  putc.c  putc.h  putchar.c  sprintf.c  stderr.c  stdin.c  stdio_impl.h  stdout.c  vfprintf.c  vsnprintf.c  vsprintf.c
libc/generic/string/: memchr.c  strcmp.c  strlen.c  strnlen.c
libc/generic/threads/: __lock.c  pthread_impl.h
libc/generic/unistd/: readv.c  sleep.c  writev.c
libc/i386/: memcpy.S  memset.S  sqrt.c  syscall.S  udivdi3.S
libc/i386/include/bits/: alltypes.h  atomic_arch.h  float.h  stdint.h
libc/include/: alloca.h  assert.h  ctype.h  endian.h  errno.h  fcntl.h  features.h  float.h  inttypes.h  limits.h  locale.h  math.h  pthread.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h  wchar.h
libc/include/koerix/: framebuffer.h  keyboard.h  module.h  scheduler.h  sysinfo.h  threads.h
libc/include/koerix/gfx/: fonts.h
libc/include/sys/: framebuffer.h  ioctl.h  resource.h  types.h  uio.h
libc/x86_64/: memcpy.S  memset.S  sqrt.c  syscall.S
libc/x86_64/include/: fp_arch.h
libc/x86_64/include/bits/: alltypes.h  atomic_arch.h  float.h  stdint.h
libkoerix/: CMakeLists.txt  crt0.c  errno.c  syscall.S
libkoerix/generic/: atomic.h
libkoerix/generic/stdio/: __lockfile.c  __stdio_read.c  __stdio_write.c  __stdout_write.c
libkoerix/include/: limits.h  pthread.h  unistd.h
libkoerix/include/koerix/: framebuffer.h  threads.h
libkoerix/include/sys/: ioctl.h
platform/pc/: Makefile.inc  build_diskimage  i386.ld  init.cpp  platform.cmake  qemu.c  qemu.cpp  serial.cpp  timer.cpp  x86_64.ld
platform/pc/drivers/: init.cpp  pci.cpp  ps2.cpp  ps2_keyboard.cpp  qemu.cpp  serial.cpp  timer.cpp
platform/pc/include/: platform.h
platform/raspi/: armv6a.ld  platform.cmake
platform/raspi/drivers/: board.cpp  debug_print.cpp  gpio.cpp  timer.cpp
platform/raspi/include/: gpio.h  raspi.h
tools/: build_rootfs
(+12 files in other folders)
